--- a/src/Client/WPF/DocumentDesktop.xaml
+++ b/src/Client/WPF/DocumentDesktop.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KronosDMS_Client.WPF"
         mc:Ignorable="d"
-        Title="DocumentDesktop" Height="450" Width="800">
+        Title="DocumentDesktop" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Grid x:Name="layoutRoot">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
